# thesis

./: .env.example  .gitignore  AGENTS.md  AMENDMENTS.md  CLASSIFIER_IMPLEMENTATION.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  MASTER_PLAN.md  Makefile  PROGRESS_SUMMARY.md  README.md  REFLECTION_IMPLEMENTATION.md  SETUP_COMPLETE.md  TASK_10.1_IMPLEMENTATION.md  TASK_10.2_IMPLEMENTATION.md  TASK_11.1_IMPLEMENTATION.md  TASK_11.2_IMPLEMENTATION.md  TASK_11.3_IMPLEMENTATION.md  TASK_11.4_IMPLEMENTATION.md  TASK_12.1_IMPLEMENTATION.md  TASK_12.2_IMPLEMENTATION.md  TASK_12.3_IMPLEMENTATION.md  TASK_13.1_13.2_IMPLEMENTATION.md  TASK_14_IMPLEMENTATION.md  TASK_15_IMPLEMENTATION.md  TASK_16_IMPLEMENTATION.md  TASK_17.1_IMPLEMENTATION.md  TASK_17.2_IMPLEMENTATION.md  TASK_18.1_IMPLEMENTATION.md  TASK_18.2_IMPLEMENTATION.md  TASK_19.1_IMPLEMENTATION.md  TASK_19.2_IMPLEMENTATION.md  TASK_9.1_VERIFICATION.md  TASK_9.2_VERIFICATION.md  TASK_9.3_IMPLEMENTATION.md  TASK_9.3_SUMMARY.md  TASK_9.3_VERIFICATION.md  TASK_9.4_SUMMARY.md  THESIS_ACTION_PLAN.md  THESIS_FINAL_v5.md  (+2 more)
.antigravitycli/: 7cfb2dac-93d2-4324-8b8d-da89d93dfe02.json
.kiro/: AGENTS.md
.omc/: project-memory.json
configs/: AGENTS.md  README.md  base.yaml
data/: AGENTS.md  README.md
docs/: AGENTS.md  DEEP_RESEARCH_HANDOFF.md  DEFENSE-DOSSIER-2026-06-20.md  HANDOFF-2026-06-20-matrix-complete.md  MORNING-REPORT-2026-06-25.md  RESULT_TABLES.md  a5-anchor-probe-decision.md  ab-gate-findings-2026-06-24.md  amended-gate-2026-06-24.md  codex-preflight-proof-2026-06-24.md  codex-review-request-2026-06-24.md  defense-qa.md  gate3-e7-findings-2026-06-17.md  literature-scan-2026-06-17.md  swarm-review-synthesis-2026-06-17.md  threats-to-validity.md
examples/: AGENTS.md  behavioral_metrics_usage.py  cl_metrics_usage.py  config_usage.py  cost_tracker_usage.py  evaluator_usage.py  experiment_runner_usage.py  failure_analysis_usage.py  feature_importance_usage.py  generate_result_tables_example.py  loader_usage.py  memory_event_logger_usage.py  memory_snapshot_simple.py  memory_snapshot_usage.py  pareto_analysis_usage.py  pilot_mode_usage.py  plots_usage.py  sequence_runner_usage.py  statistical_analysis_usage.py  task_env_usage.py  task_logger_usage.py  trajectory_logger_usage.py
paper/: refs.yml  thesis_draft.typ
results/: failure_analysis_report.json
scripts/: AGENTS.md  ab_gate.py  ab_gate_amended.py  ab_schedule.py  build_ab_manifest.py  build_curriculum.py  doctor.sh  fleet_relaunch.sh  fleet_setup.sh  policy_validation.py  preflight_runner_diagnostics.py  resolution_probe.py  run_analysis.py  run_matrix_shard.sh  run_pilot.sh  run_pilot_policy.py  run_smoke.py  setup_env.sh  shard_units.py  unit_status.py  verify_env.py
src/: AGENTS.md  __init__.py  errors.py  model_output.py
tests/: AGENTS.md  __init__.py  test_ab_preflight.py  test_ab_tooling.py  test_agent_largefile_integration.py  test_agent_limits.py  test_agent_react_loop.py  test_agents_tools.py  test_aggregate_results.py  test_anchor_probe.py  test_aux_client.py  test_benchmark_models.py  test_build_probe.py  test_cl_metrics.py  test_classifier_basic.py  test_cls_consolidation_policy.py  test_completion.py  test_config.py  test_config_integration.py  test_container_backend.py  test_cost_summary.py  test_cost_telemetry_e1.py  test_cost_tracker.py  test_error_handling.py  test_evaluator_harness.py  test_evaluator_parsing.py  test_experiment_cli.py  (+41 more)
(+178 files in other folders)
