[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-pruning-research"
version = "0.1.0"
description = "Memory Pruning and Forgetting Policies for AI Coding Agents - Research System"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Research Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core agent framework
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    
    # Memory and embeddings
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=2.7.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    
    # OpenAI SDK
    "openai>=1.40.0",
    
    # Data processing
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    
    # Statistical analysis
    "scipy>=1.13.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.5.0",
    
    # Plotting
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    
    # Configuration
    "pyyaml>=6.0",
    "pydantic>=2.8.0",
    
    # Logging and monitoring
    "wandb>=0.17.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "tiktoken>=0.7.0",

    # Evaluation harness (SWE-bench) + canonical dataset access.
    # D5: arm64 instance images are built locally (namespace=""); the harness
    # loads FAIL_TO_PASS/PASS_TO_PASS from SWE-bench_Verified by instance_id.
    "swebench>=4.0.0",
    "datasets>=2.19.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    
    # Linting and formatting
    "ruff>=0.5.0",
    
    # Type checking
    "mypy>=1.11.0",
    "types-pyyaml>=6.0.0",
    "types-tqdm>=4.66.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/**/*.py" = ["B011"]  # assert False

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "faiss.*",
    "wandb.*",
    "langgraph.*",
    "langchain.*",
    "sentence_transformers.*",
]
ignore_missing_imports = true
